# RAE2

./: .env.example  .gitignore  BurstDetection.ipynb  CleanFileGenerator.ipynb  LICENSE  MANIFEST.in  RAE2 File Reader MP.ipynb  RAE2 File Reader.ipynb  RAE2Analysis.ipynb  RAE2Occultation.ipynb  RAEAngles.ipynb  RAEAnglesUtilities.py  README.md  floatDataInvestigation.ipynb  ingressEgressHistogramsJupiter.ipynb  isInSky.ipynb  normalize_spectra.py  occultationHistograms.ipynb  plotRyleVonberg.ipynb  plot_occultation_diagnostics.py  plot_random_comparisons.py  pyproject.toml  upper_v_relative_strength_map.py
.ipynb_checkpoints/: BurstDetection-checkpoint.ipynb  RAE2 File Reader MP-checkpoint.ipynb  RAE2 File Reader-checkpoint-checkpoint.ipynb  RAE2Occultation-checkpoint.ipynb  RAEAngles-checkpoint.ipynb  isInSky-checkpoint.ipynb
RAE2Agent/: README.md  log.txt  occultation_analysis.py  occultation_search.py
configs/: bright_sources.csv  default_pipeline.json  focused_baseline_robustness_targets.csv  galactic_pole_controls.csv  jupiter_warwick_dulk_riddle_1975_active_windows.csv
docs/: data_requirements.md  script_inventory.md  usage.md
examples/: minimal_api_usage.py  run_smoke.sh
occultationResultsLowerV2min/: CAS-Amedians.pkl  Crab Nebulamedians.pkl  Jupitermedians.pkl  Neptunemedians.pkl  Uranusmedians.pkl  Venusmedians.pkl  Virgo Amedians.pkl
occultationResultsLowerV5min/: Crab Nebulamedians.pkl  Cygnus-Amedians.pkl  Fornax-Amedians.pkl  Jupitermedians.pkl  Saturnmedians.pkl  Uranusmedians.pkl
occultationResultsUpperV2min/: CAS-Amedians.pkl  Marsmedians.pkl  (+8 more)
(+946 files in other folders)
